--- a/data/ejemplo.mdx
+++ b/data/ejemplo.mdx
@@ -4,8 +4,16 @@ date: "30/10/2023"
 author: "Osvaldo Ponce"
 ---
 
-<MdxPage>
-# Hola mundo
+<MdxPage 
+title="Why customer retention is the ultimate growth strategy">
 
-*Hola, este es mi primer post escrito en Markdown*
+Objectively restore stand-alone markets rather than enterprise-wide products. Uniquely 
+underwhelm best-of-breed mindshare through adaptive niches.Interactively leverage existing 
+innovative e-services seamlessly parallel task open-source content without resource sucking 
+technology.
+
+Dramatically cultivate frictionless communities with enterprise-wide customer service. 
+Dramatically simplify web-enabled growth strategies rather than integrated imperatives. 
+Interactively leverage existing innovative e-services customer service. Intrinsicly impact web-enabled value vis-a-vis innovative customer service. 
+Continually procrastinate efficient growth strategies for backend experiences.
 </MdxPage>
