style a blog y ejemplos mdx

--- a/data/ejemplo2.mdx
+++ b/data/ejemplo2.mdx
@@ -4,7 +4,7 @@ date: "31/10/2023"
 author: "Osvaldo Ponce"
 ---
 
-<MdxPage>
+<MdxPage title="Mi segundo post en markdown">
 # asdfasdf
 
 Hola, este es mi segundo post escrito en Markdown
