--- a/data/ejemplo.mdx
+++ b/data/ejemplo.mdx
@@ -7,13 +7,17 @@ author: "Osvaldo Ponce"
 <MdxPage 
 title="Why customer retention is the ultimate growth strategy">
 
-Objectively restore stand-alone markets rather than enterprise-wide products. Uniquely 
-underwhelm best-of-breed mindshare through adaptive niches.Interactively leverage existing 
-innovative e-services seamlessly parallel task open-source content without resource sucking 
-technology.
+> Objectively restore stand-alone markets rather than enterprise-wide products. Uniquely underwhelm best-of-breed mindshare through adaptive niches. Interactively leverage existing innovative e-services seamlessly parallel task open-source content without resource sucking technology.
 
-Dramatically cultivate frictionless communities with enterprise-wide customer service. 
-Dramatically simplify web-enabled growth strategies rather than integrated imperatives. 
-Interactively leverage existing innovative e-services customer service. Intrinsicly impact web-enabled value vis-a-vis innovative customer service. 
-Continually procrastinate efficient growth strategies for backend experiences.
+> Dramatically cultivate frictionless communities with enterprise-wide customer service. Dramatically simplify web-enabled growth strategies rather than integrated imperatives. Interactively leverage existing innovative e-services customer service. Intrinsicly impact web-enabled value vis-a-vis innovative customer service. Continually procrastinate efficient growth strategies for backend experiences.
+
+### Customer retention is key
+
+- Be involved in every step of the product design cycle from discovery and user acceptance testing.
+- Work with BAs, product managers and tech teams to lead the Product Design
+- Maintain quality of the design process and ensure that when designs are translated into code they accurately.
+- Accurately estimate design tickets during planning sessions.
+- Contribute to sketching sessions involving non-designersCreate, and pattern libraries.
+- Design pixel perfect responsive UI’s and understand that adopting common interface
+- Interface patterns is better for UX than reinventing the wheel
 </MdxPage>
