Agrege post de ejemplo y avatar de post

--- a/data/ejemplo2.mdx
+++ b/data/ejemplo2.mdx
@@ -2,6 +2,8 @@
 title: "Mi segundo post en markdown"
 date: "31/10/2023"
 author: "Osvaldo Ponce"
+image: "img/testimonial/6.jpg"
+imgPost: "img/2.png"
 ---
 
 <MdxPage title="Mi segundo post en markdown">
