--- a/data/ejemplo5.mdx
+++ b/data/ejemplo5.mdx
@@ -2,6 +2,8 @@
 title: "Mi primer post con markdown"
 date: "30/10/2023"
 author: "Osvaldo Ponce"
+image: "img/testimonial/6.jpg"
+imgPost: "img/blog/blog-2.jpg"
 ---
 
 <MdxPage 
