--- a/data/ejemplo.mdx
+++ b/data/ejemplo.mdx
@@ -1,11 +1,20 @@
 ---
-title: "Mi primer post con markdown"
+title: "Primer Post con Markdown"
 date: "30/10/2023"
 author: "Osvaldo Ponce"
+image: "img/testimonial/6.jpg"
+imgPost: "img/blog/blog-2.jpg"
 ---
 
 <MdxPage 
-title="Why customer retention is the ultimate growth strategy">
+title="Why customer retention is the ultimate growth strategy"
+date="30/10/2023"
+author="Veronica Jose"
+job="Head of Designer"
+description="Lidera y supervisa la visión creativa, la estrategia y la ejecución de proyectos de diseño."
+image="img/testimonial/6.jpg">
+
+# Estes es un Post de ejemplo
 
 > Objectively restore stand-alone markets rather than enterprise-wide products. Uniquely underwhelm best-of-breed mindshare through adaptive niches. Interactively leverage existing innovative e-services seamlessly parallel task open-source content without resource sucking technology.
 
@@ -20,4 +29,5 @@ title="Why customer retention is the ultimate growth strategy">
 - Contribute to sketching sessions involving non-designersCreate, and pattern libraries.
 - Design pixel perfect responsive UI’s and understand that adopting common interface
 - Interface patterns is better for UX than reinventing the wheel
+
 </MdxPage>
