--- a/data/ejemplo3.mdx
+++ b/data/ejemplo3.mdx
@@ -2,6 +2,8 @@
 title: "Mi tercer post con markdown"
 date: "30/10/2023"
 author: "Osvaldo Ponce"
+image: "img/testimonial/6.jpg"
+imgPost: "img/4.png"
 ---
 
 <MdxPage title="Mi tercer post con markdown">
