--- a/data/ejemplo.mdx
+++ b/data/ejemplo.mdx
@@ -9,7 +9,7 @@ imgPost: "img/blog/blog-2.jpg"
 <MdxPage 
 title="Why customer retention is the ultimate growth strategy"
 date="30/10/2023"
-author="Veronica Jose"
+author="Veronica J. Narciso"
 job="Head of Designer"
 description="Lidera y supervisa la visión creativa, la estrategia y la ejecución de proyectos de diseño."
 image="img/testimonial/6.jpg">
