--- a/data/ejemplo2.mdx
+++ b/data/ejemplo2.mdx
@@ -7,7 +7,7 @@ imgPost: "img/2.png"
 ---
 
 <MdxPage title="Mi segundo post en markdown">
-# asdfasdf
+# Segundo Post
 
 Hola, este es mi segundo post escrito en Markdown
 </MdxPage>
