--- a/data/ejemplo6.mdx
+++ b/data/ejemplo6.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Post numero 5 con Markdown"
+title: "Otro post de ejemplo"
 date: "30/10/2023"
 author: "Osvaldo Ponce"
 image: "img/testimonial/6.jpg"
