--- a/data/ejemplo77.mdx
+++ b/data/ejemplo77.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Otro post de ejemplo"
+title: "ejemplo 77"
 date: "30/10/2023"
 author: "Osvaldo Ponce"
 image: "img/testimonial/6.jpg"
