--- a/data/ejemplo.mdx
+++ b/data/ejemplo.mdx
@@ -16,9 +16,14 @@ image="img/testimonial/6.jpg">
 
 # Estes es un Post de ejemplo
 
-> Objectively restore stand-alone markets rather than enterprise-wide products. Uniquely underwhelm best-of-breed mindshare through adaptive niches. Interactively leverage existing innovative e-services seamlessly parallel task open-source content without resource sucking technology.
+> Objectively restore stand-alone markets rather than enterprise-wide products. 
+Uniquely underwhelm best-of-breed mindshare through adaptive niches. 
+Interactively leverage existing innovative e-services seamlessly parallel task open-source content without resource sucking technology.
 
-> Dramatically cultivate frictionless communities with enterprise-wide customer service. Dramatically simplify web-enabled growth strategies rather than integrated imperatives. Interactively leverage existing innovative e-services customer service. Intrinsicly impact web-enabled value vis-a-vis innovative customer service. Continually procrastinate efficient growth strategies for backend experiences.
+> Dramatically cultivate frictionless communities with enterprise-wide customer service. 
+Dramatically simplify web-enabled growth strategies rather than integrated imperatives. 
+Interactively leverage existing innovative e-services customer service. Intrinsicly impact web-enabled value vis-a-vis innovative customer service. 
+Continually procrastinate efficient growth strategies for backend experiences.
 
 ### Customer retention is key
 
