se agrego los componentes solicitados en la reunion de hoy, las paginas modificadas fueron MDXComponents, estilos y PruebaFecha

--- a/data/PruebaFecha.mdx
+++ b/data/PruebaFecha.mdx
@@ -7,18 +7,22 @@ imgPost: "img/blog/blog-2.jpg"
 ---
 
 <MdxPage 
-title="Why customer retention is the ultimate growth strategy"
+title="Esto es un ejemplo de un Post"
 date="30/10/2023"
 author="Veronica J. Narciso"
 job="Head of Designer"
 description="Lidera y supervisa la visión creativa, la estrategia y la ejecución de proyectos de diseño."
 image="img/testimonial/6.jpg">
 
-# Estes es un Post de ejemplo
+> Objectively restore stand-alone markets rather than enterprise-wide products. 
+Uniquely underwhelm best-of-breed mindshare through adaptive niches. 
+Interactively leverage existing innovative e-services seamlessly parallel task open-source content without resource sucking technology.
 
-> Objectively restore stand-alone markets rather than enterprise-wide products. Uniquely underwhelm best-of-breed mindshare through adaptive niches. Interactively leverage existing innovative e-services seamlessly parallel task open-source content without resource sucking technology.
-
-> Dramatically cultivate frictionless communities with enterprise-wide customer service. Dramatically simplify web-enabled growth strategies rather than integrated imperatives. Interactively leverage existing innovative e-services customer service. Intrinsicly impact web-enabled value vis-a-vis innovative customer service. Continually procrastinate efficient growth strategies for backend experiences.
+> Dramatically cultivate frictionless communities with enterprise-wide customer service. 
+Dramatically simplify web-enabled growth strategies rather than integrated imperatives. 
+Interactively leverage existing innovative e-services customer service. 
+Intrinsicly impact web-enabled value vis-a-vis innovative customer service. 
+Continually procrastinate efficient growth strategies for backend experiences.
 
 ### Customer retention is key
 
@@ -30,4 +34,27 @@ image="img/testimonial/6.jpg">
 - Design pixel perfect responsive UI’s and understand that adopting common interface
 - Interface patterns is better for UX than reinventing the wheel
 
+<MdxPageImagen1 image1="img/tab-feature-img-4.png"/><br />
+
+### Focus on increasing customer retention first
+
+> Appropriately fashion ubiquitous information without future-proof growth strategies. 
+Interactively morph cutting-edge e-business before functional potentialities. 
+Compellingly syndicate empowered communities via multimedia based schemas. 
+Objectively productize granular materials whereas quality solutions. 
+Collaboratively reinvent innovative paradigms and low-risk high-yield action items.
+
+- Interactively plagiarize covalent "outside the box" thinking vis-a-vis.
+- Holisticly communicate integrated channels via backend interfaces. Authoritatively.
+- Globally actualize effective processes through synergistic ROI. Interactively.
+
+
+### Skill & Experience
+
+- You have at least 3 years’ experience working as a Product Designer.
+- You have experience using Sketch and InVision or Framer X
+- You have some previous experience working in an agile environment – Think two-week sprints.
+- You are familiar using Jira and Confluence in your workflow
+                                
+<MdxPageImagen2 image2="img/tab-feature-img-4.png"/><br />
 </MdxPage>
