se agrego la funcion para modificar las redes sociales del que haya hecho el post

--- a/data/PruebaFecha.mdx
+++ b/data/PruebaFecha.mdx
@@ -12,7 +12,13 @@ date="30/10/2023"
 author="Veronica J. Narciso"
 job="Head of Designer"
 description="Lidera y supervisa la visión creativa, la estrategia y la ejecución de proyectos de diseño."
-image="img/testimonial/6.jpg">
+image="img/testimonial/6.jpg"
+
+linkedin="https://mx.linkedin.com/company/swarmtech20"
+tiktok="https://www.youtube.com/channel/UCtYHadfYju5iSy0ykpAwkyQ"
+instagram="https://www.instagram.com/swarmtech20/"
+facebook="https://www.facebook.com/swarmtech20/"
+>
 
 > Objectively restore stand-alone markets rather than enterprise-wide products. 
 Uniquely underwhelm best-of-breed mindshare through adaptive niches. 
